# syndata-experiment

./: .gitignore  app.py  pyproject.toml
pages/: 1_experiment.py  2_thankyou.py  3_admin.py
src/: app.py  experiment.py
valid_examples/: example_calls.json
